--- a/cloud-info/requirements.txt
+++ b/cloud-info/requirements.txt
@@ -1,14 +1,12 @@
 # Cloud info version is 6fbbf1c24bd32c21d5b8de783d7face6c6c5987e
 # 6fbbf1c24bd32c21d5b8de783d7face6c6c5987e includes json glue support and fixes for it
-git+https://github.com/EGI-Federation/cloud-info-provider.git@6fbbf1c24bd32c21d5b8de783d7face6c6c5987e
-git+https://github.com/ARGOeu/argo-ams-library@devel
+git+https://github.com/EGI-Federation/cloud-info-provider.git@88c3a14d1e11c1adf9a03c85679cdcc8e3a2ede1
 python-glanceclient==4.10.0
 python-novaclient==18.11.0
 python-keystoneclient==5.7.0
+python-openstackclient==8.2.0
 keystoneauth1==5.12.0
 yq==3.4.3
-fedcloudclient==1.4.0
 PyJWT==2.10.1
 responses==0.25.8
-
-
+requests==2.32.5
