--- a/cloud-info/requirements.txt
+++ b/cloud-info/requirements.txt
@@ -1,6 +1,4 @@
-# Cloud info version is 6fbbf1c24bd32c21d5b8de783d7face6c6c5987e
-# 6fbbf1c24bd32c21d5b8de783d7face6c6c5987e includes json glue support and fixes for it
-git+https://github.com/EGI-Federation/cloud-info-provider.git@88c3a14d1e11c1adf9a03c85679cdcc8e3a2ede1
+cloud-info-provider==1.0.0
 python-glanceclient==4.10.0
 python-novaclient==18.11.0
 python-keystoneclient==5.7.0
