--- a/deploy/cloud-init.yaml
+++ b/deploy/cloud-init.yaml
@@ -9,7 +9,7 @@ users:
     sudo: ALL=(ALL) NOPASSWD:ALL
     ssh_import_id:
       - gh:enolfc
-      - gh:gwarf
+      - gh:sebastian-luna-valero
 
 packages:
   - git
