Move to service account and environments

--- a/.github/workflows/deploy-cloud-info.yml
+++ b/.github/workflows/deploy-cloud-info.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   deploy:
     uses: ./.github/workflows/deploy.yml
+    environment: cloud-info
     with:
       dir: "deploy/cloud-info"
       tags: "cloud-info,docker"
