--- a/.github/workflows/deploy-cloud-info.yml
+++ b/.github/workflows/deploy-cloud-info.yml
@@ -12,8 +12,8 @@ on:
 jobs:
   deploy:
     uses: ./.github/workflows/deploy.yml
-    environment: cloud-info
     with:
       dir: "deploy/cloud-info"
       tags: "cloud-info,docker"
+      env: "cloud-info"
     secrets: inherit
