--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,12 +10,16 @@ on:
       tags:
         required: true
         type: string
+      env:
+        required: true
+        type: string
 
 
 jobs:
   terraform:
     name: "Terraform"
     runs-on: ubuntu-latest
+    environment: {{ input.env }}
     env:
       TF_VAR_flavor_id: ${{ vars.TF_VAR_FLAVOR_ID }}
       TF_VAR_image_id: ${{ vars.TF_VAR_IMAGE_ID }}
