--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
     name: "Terraform"
     runs-on: ubuntu-latest
     environment: 
-      name: ${{ input.env }}
+      name: ${{ inputs.env }}
     env:
       TF_VAR_flavor_id: ${{ vars.TF_VAR_FLAVOR_ID }}
       TF_VAR_image_id: ${{ vars.TF_VAR_IMAGE_ID }}
