--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,7 +17,7 @@ jobs:
         image:
           - cloud-info
           - caso
-          - image-sync
+          - catchall
 
     steps:
       - name: Checkout
