Move to new structure

--- a/catchall/Dockerfile
+++ b/catchall/Dockerfile
@@ -1,4 +1,37 @@
-# The actual image
+##################################################
+# Stage 1 - Build python venv
+##################################################
+FROM python:3 AS build
+
+# hadolint ignore=DL3015, DL3008
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+       gnupg2 curl git \
+    && curl -s https://dist.eugridpma.info/distribution/igtf/current/GPG-KEY-EUGridPMA-RPM-4 \
+	| gpg --dearmor  -o /etc/apt/keyrings/eugridpma.gpg  \
+    && echo "deb [signed-by=/etc/apt/keyrings/eugridpma.gpg] https://repository.egi.eu/sw/production/cas/1/current egi-igtf core" > /etc/apt/sources.list.d/igtf.list \
+    && apt-get update \
+    && apt-get install -y ca-policy-egi-core \
+    && rm -rf /var/lib/apt/lists/*
+
+WORKDIR /catchall
+
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+
+COPY pyproject.toml uv.lock /catchall
+
+RUN uv pip compile pyproject.toml -o requirements.txt
+
+RUN python -m venv /catchall/venv  \
+    && /catchall/venv/bin/pip install --no-cache-dir -r requirements.txt \
+    && cat /etc/grid-security/certificates/*.pem >> "$(/catchall/venv/bin/python -m requests.certs)"
+
+COPY . /catchall
+RUN /catchall/venv/bin/pip install --no-cache-dir .
+
+##################################################
+# Stage 2 - take venv and install needed packages
+##################################################
 FROM python:3-slim
 
 LABEL org.opencontainers.image.source=https://github.com/EGI-Federation/fedcloud-catchall-operations
@@ -8,28 +41,20 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 # hadolint ignore=DL3015, DL3008
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-       gnupg2 qemu-utils curl git \
-    && curl -s https://dist.eugridpma.info/distribution/igtf/current/GPG-KEY-EUGridPMA-RPM-4 \
-	| gpg --dearmor  -o /etc/apt/keyrings/eugridpma.gpg  \
-    && echo "deb [signed-by=/etc/apt/keyrings/eugridpma.gpg] https://repository.egi.eu/sw/production/cas/1/current egi-igtf core" > /etc/apt/sources.list.d/igtf.list \
-    && apt-get update \
-    && apt-get install -y ca-policy-egi-core \
+       jq rclone qemu-utils \
     && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /image-sync
+RUN mkdir /catchall \
+    && groupadd -g 1999 python \
+    && useradd -r -u 1999 -g python python \
+    && chown -R python:python /catchall
 
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+WORKDIR /catchall
 
-RUN groupadd -g 1999 python \
-    && useradd -m -r -u 1999 -g python python \
-    && chown python:python /image-sync
+# All the python code from the build image above
+COPY --chown=python:python --from=build /catchall/venv ./venv
+#COPY --chown=python:python --from=build /fedcloud /fedcloud
+
+ENV PATH="/catchall/venv/bin:$PATH"
 
 USER 1999
-
-COPY --chown=python:python . /image-sync
-
-RUN uv sync --locked
-
-RUN cat /etc/grid-security/certificates/*.pem >> "$(uv run python -m requests.certs)"
-
-CMD ["uv", "run", "image-sync"]
