--- a/deploy/roles/catchall/tasks/cloud-info.yml
+++ b/deploy/roles/catchall/tasks/cloud-info.yml
@@ -42,5 +42,5 @@
       flock -n -w {{ cloud_info_cron.timeout }} /var/lock/cloud-info/{{ filename }}
       docker run --rm -v /etc/egi:/etc/egi:ro
       --env-file /etc/egi/cloud-info/{{ filename }}.env
-      {{ cloud_info_image }} >> /var/log/cloud-info/{{ filename }}.log 2>&1
+      {{ cloud_info_image }} publisher.sh >> /var/log/cloud-info/{{ filename }}.log 2>&1
     cron_file: "cloud-info-{{ filename }}"
