--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -14,7 +14,7 @@ jobs:
       - name: "Set up Python"
         uses: actions/setup-python@v6
         with:
-          python-version-file: ".catchall/python-version"
+          python-version-file: "catchall/.python-version"
       - name: Install uv
         uses: astral-sh/setup-uv@v7
       - name: Install the project
