--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v7
       - name: Install the project
-        run:
+        run: |
           cd catchall
           uv sync --locked
       - name: Run tests
