--- a/catchall/pyproject.toml
+++ b/catchall/pyproject.toml
@@ -15,6 +15,7 @@ requires-python = ">=3.14"
 dependencies = [
     "atrope",
     "cloud-info-provider==1.0.2",
+    "fixtures>=4.2.8",
     "httpx>=0.28.1",
     "keystoneauth1>=5.12.0",
     "oslo-config>=10.2.0",
@@ -25,6 +26,7 @@ dependencies = [
     "python-openstackclient>=8.3.0",
     "pyyaml>=6.0.3",
     "respx>=0.22.0",
+    "testtools>=2.8.2",
 ]
 
 [project.scripts]
