Move to a single python package (#462)
* Move to a catchall single package

* Work in progress

* Make it a common config

* Move to new structure

* Add fedcloudclient

* Add cloud-info stuff

* Move to catchall

* Fix dockerfile

* Fix code

* Missing file...

* Fix cloud-info

* Be explicit about the command to run

* Update role for new setup

* Fix roles

* CI fixes

* Move to httpx

* Fix tests

* Linting

* Remove unneeded code

* Downgrading the error to warning

We don't have a clear solution for sites with multiple endpoints so not being strict here.

* Fix tests

* Keep trying to fix tests

* Fix tests!

* Linting

* Clean debug in python

* Add missing tags

* Create home for the user

* Apply suggestion from @enolfc

* Apply suggestion from @enolfc

* Use a better name

* Rename and reorganise

* Move to uv dependencies

* Fix test file

* Fix docker

* Fix tests

* Add missing file to build

* Minor fix

--- a/deploy/roles/catchall/tasks/main.yml
+++ b/deploy/roles/catchall/tasks/main.yml
@@ -31,14 +31,20 @@
 - name: EGI configuration directories
   tags: ["cloud-info", "image-sync"]
   ansible.builtin.file:
-    path: "{{ item }}"
+    path: "/etc/egi"
     state: directory
     mode: "755"
     owner: "{{ egi_user }}"
     group: "{{ egi_group }}"
-  loop:
-    - /etc/egi
-    - /etc/egi/vos
+
+- name: Build global configuration file
+  tags: ["cloud-info", "image-sync"]
+  ansible.builtin.template:
+    src: catchall.conf.j2
+    dest: /etc/egi/catchall.conf
+    mode: "600"
+    owner: "{{ egi_user }}"
+    group: "{{ egi_group }}"
 
 - name: Site specific config
   tags: ["cloud-info"]
