--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test:
-    name: test python code
+    name: Test and validate
     runs-on: ubuntu-latest
 
     steps:
@@ -29,8 +29,7 @@ jobs:
           uv sync --locked --all-groups
       - name: Run tests
         run: |
-          cd src/fedcloud_catchall
-          uv run python -m unittest
+	  uv run py.test --cov=fedcloud_catchall --cov-report=xml --cov-report=term-missing src/fedcloud_catchall/
       # Validation
       - name: Validate GOC and VOs
         run: |
