--- a/.github/workflows/deploy-image-sync.yml
+++ b/.github/workflows/deploy-image-sync.yml
@@ -14,6 +14,6 @@ jobs:
     uses: ./.github/workflows/deploy.yml
     with:
       dir: "deploy/image-sync"
-      tags: "docker,image-sync"
+      tags: "docker,image-sync,accounting"
       env: "image-sync"
     secrets: inherit
