--- a/deploy/roles/catchall/tasks/main.yml
+++ b/deploy/roles/catchall/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Ensure cron is available
-  tags: ["cloud-info", "image-sync"]
+  tags: ["cloud-info", "image-sync", "accounting"]
   ansible.builtin.apt:
     name: cron
     state: present
@@ -15,7 +15,7 @@
   tags: ["never", "docker"]
 
 - name: Load site configuration
-  tags: ["cloud-info", "image-sync"]
+  tags: ["cloud-info", "image-sync", "accounting"]
   ansible.builtin.include_vars:
     file: "{{ item }}"
     name: "{{ 'site_incl_vars_' ~ item | basename | splitext | first }}"
@@ -23,13 +23,13 @@
     - "{{ site_config_dir }}/*.yaml"
 
 - name: Set site configuration variable
-  tags: ["cloud-info", "image-sync"]
+  tags: ["cloud-info", "image-sync", "accounting"]
   ansible.builtin.set_fact:
     sites: "{{ sites | default([]) + [lookup('vars', item)] }}"
   loop: "{{ query('varnames', '^site_incl_vars_(.*)$') }}"
 
 - name: EGI configuration directories
-  tags: ["cloud-info", "image-sync"]
+  tags: ["cloud-info", "image-sync", "accounting"]
   ansible.builtin.file:
     path: "/etc/egi"
     state: directory
@@ -38,7 +38,7 @@
     group: "{{ egi_group }}"
 
 - name: Build global configuration file
-  tags: ["cloud-info", "image-sync"]
+  tags: ["cloud-info", "image-sync", "accounting"]
   ansible.builtin.template:
     src: catchall.conf.j2
     dest: /etc/egi/catchall.conf
@@ -65,3 +65,10 @@
     file: sync.yml
     apply:
       tags: "image-sync"
+
+- name: Accounting config
+  tags: ["accounting"]
+  ansible.builtin.include_tasks:
+    file: accounting.yml
+    apply:
+      tags: "accounting"
