--- a/deploy/roles/catchall/tasks/accounting.yml
+++ b/deploy/roles/catchall/tasks/accounting.yml
@@ -19,6 +19,22 @@
       docker run --rm -v /etc/egi:/etc/egi:ro
       -v {{ site_config_dir }}:{{ site_config_mountpoint }}:ro
       -v /var/spool/egi:/var/spool/egi
-      {{ accounting_image }} accounting 
-      --config-dir /etc/egi >> /var/log/sync.log 2>&1
+      {{ accounting_image }} accounting
+      --config-dir /etc/egi >> /var/log/accounting.log 2>&1
     cron_file: "egi-accounting"
+
+- name: record cleaner cron
+  ansible.builtin.cron:
+    name: caso
+    weekday: "{{ record_cleaner_cron.weekday }}"
+    minute: "{{ record_cleaner_cron.minute }}"
+    hour: "{{ record_cleaner_cron.hour }}"
+    user: root
+    job: >
+      flock -n -w {{ accounting_cron.timeout }} /var/lock/sync
+      docker run --rm -v /etc/egi:/etc/egi:ro
+      -v {{ site_config_dir }}:{{ site_config_mountpoint }}:ro
+      -v /var/spool/egi:/var/spool/egi
+      {{ accounting_image }} record-cleaner
+      --config-dir /etc/egi >> /var/log/cleaner.log 2>&1
+    cron_file: "egi-accounting-cleaner"
