Add generation of accounting records (#466)
* Improve discovery

* Improve testing

* Add accounting

* Linting

* Add accounting to image-sync deployment

* Force running the caso extraction

* Clean records

(as we don't have SSM yet enabled!)

* Fix the accounting image

* Do not run at the same time as the image-sync

* Apply suggestion from @sebastian-luna-valero

Co-authored-by: Sebastian Luna-Valero <sebastian-luna-valero@users.noreply.github.com>

---------

Co-authored-by: Sebastian Luna-Valero <sebastian-luna-valero@users.noreply.github.com>

--- a/deploy/roles/catchall/defaults/main.yaml
+++ b/deploy/roles/catchall/defaults/main.yaml
@@ -43,3 +43,17 @@ image_sync_cron:
   hour: "*/3"
   weekday: "*"
   timeout: "9000" # 2.5 hours
+
+accounting_image: ghcr.io/egi-federation/fedcloud-catchall:latest
+
+accounting_cron:
+  minute: "5"
+  hour: "*/5"
+  weekday: "*"
+  timeout: "9000" # 2.5 hours
+
+record_cleaner_cron:
+  minute: "9"
+  hour: "2"
+  weekday: "5"
+  timeout: "9000" # 2.5 hours
